add block about

--- a/index.html
+++ b/index.html
@@ -148,6 +148,114 @@
                 </div>
             </div>
             <!-- BLOCK 2 BANNER -->
+            <section class="about">
+                <div class="about__inner">
+                    <div class="about__info">
+                        <div class="container">
+                            <div class="about__info-inner flex-row">
+                                <div class="about__card flex-col">
+                                    <h2 class="about__title">
+                                        О компании
+                                    </h2>
+                                    <div class="about__col flex-col">
+                                        <p class="about__info-text title">
+                                            <span>Cleanol</span> - российский производитель автохимии, автокосметики,
+                                            средств для профессионального клининга и стирки
+                                        </p>
+                                        <p class="about__info-text">
+                                            <span>Основа рецептур</span> - компоненты мировых лидеров в области химии
+                                            (Basf,
+                                            AkzoNobel и др.)
+                                        </p>
+                                        <p class="about__info-text">
+                                            <span>Комплексный подход в решении задач клиента</span> – главный приоритет
+                                            в
+                                            работе
+                                            над
+                                            качеством
+                                            продукции и расширением ассортимента
+                                        </p>
+                                        <p class="about__info-text">
+                                            Компания предлагает набор технологических решений, адаптированных для самых
+                                            разных
+                                            географических, физических и экономических условий
+                                        </p>
+                                        <p class="about__info-text">
+                                            Чтобы обеспечить своим клиентам лучший результат, специалисты компании
+                                            CLEANOL
+                                            проводят
+                                            исследования реальных технологических процессов на предприятиях автомойки и
+                                            детейлинга
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="about__wrapper">
+                                    <div class="about__background">
+                                        <img src="./images/about-background.png" alt="building">
+                                    </div>
+                                    <div class="about__background-desc">
+                                        <p>
+                                            <span>Компания Cleanol</span> - это индивидуальный подход и, благодаря
+                                            накопленному опыту, высокое качество продукции
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="about__description">
+                    <div class="container">
+                        <div class="about__desc-inner flex-row">
+                            <div class="about__desc-col flex-col">
+                                <div class="about__desc-row flex-row">
+                                    <img class="about__logo" src="./images/about-logo.png" alt="logo">
+                                    <p class="about__desc">
+                                        официальный представитель компании Cleanol в Беларуси
+                                    </p>
+                                </div>
+                                <p class="about__desc-text">
+                                    Регулярное сотрудничество, стабильные объемы продаж, ответственность, честность
+                                    позволили нам стать официальным представителем Cleanol - одной из лидирующих
+                                    компаний по
+                                    производству химии для автоматических моек, автомоек самообслуживания,
+                                    профессионального
+                                    клининга и сегмента HoReCa
+                                </p>
+                            </div>
+                            <div class="about__desc-col flex-col">
+                                <h6 class="about__desc-title">
+                                    Чем это выгодно Вам?
+                                </h6>
+                                <div class="about__block-inner flex-row">
+                                    <div class="about__block-col flex-col">
+                                        <div class="about__block flex-col">
+                                            <p>
+                                                лучшие цены в Беларуси
+                                            </p>
+                                        </div>
+                                        <div class="about__block flex-col">
+                                            <p>
+                                                любая продукция под заказ в кратчайшие сроки
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="about__block-col flex-col">
+                                        <div class="about__block flex-col">
+                                            <p>
+                                                официальная гарантия на продукцию
+                                            </p>
+                                        </div>
+                                        <button class="about__btn">
+                                            Позвонить
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!-- block 5 -->
             <div class="photos">
                 <img src="./images/block-5/photo_1.png" alt="" class="photos__item photos__item_l-top">
