fix bug with wrapper of block about

--- a/index.html
+++ b/index.html
@@ -206,49 +206,51 @@
                 </div>
                 <div class="about__description">
                     <div class="container">
-                        <div class="about__desc-inner flex-row">
-                            <div class="about__desc-col flex-col">
-                                <div class="about__desc-row flex-row">
-                                    <img class="about__logo" src="./images/about-logo.png" alt="logo">
-                                    <p class="about__desc">
-                                        официальный представитель компании Cleanol в Беларуси
+                        <div class="about__description-wrapper">
+                            <div class="about__desc-inner flex-row">
+                                <div class="about__desc-col flex-col">
+                                    <div class="about__desc-row flex-row">
+                                        <img class="about__logo" src="./images/about-logo.png" alt="logo">
+                                        <p class="about__desc">
+                                            официальный представитель компании Cleanol в Беларуси
+                                        </p>
+                                    </div>
+                                    <p class="about__desc-text">
+                                        Регулярное сотрудничество, стабильные объемы продаж, ответственность, честность
+                                        позволили нам стать официальным представителем Cleanol - одной из лидирующих
+                                        компаний по
+                                        производству химии для автоматических моек, автомоек самообслуживания,
+                                        профессионального
+                                        клининга и сегмента HoReCa
                                     </p>
                                 </div>
-                                <p class="about__desc-text">
-                                    Регулярное сотрудничество, стабильные объемы продаж, ответственность, честность
-                                    позволили нам стать официальным представителем Cleanol - одной из лидирующих
-                                    компаний по
-                                    производству химии для автоматических моек, автомоек самообслуживания,
-                                    профессионального
-                                    клининга и сегмента HoReCa
-                                </p>
-                            </div>
-                            <div class="about__desc-col flex-col">
-                                <h6 class="about__desc-title">
-                                    Чем это выгодно Вам?
-                                </h6>
-                                <div class="about__block-inner flex-row">
-                                    <div class="about__block-col flex-col">
-                                        <div class="about__block flex-col">
-                                            <p>
-                                                лучшие цены в Беларуси
-                                            </p>
+                                <div class="about__desc-col flex-col">
+                                    <h6 class="about__desc-title">
+                                        Чем это выгодно Вам?
+                                    </h6>
+                                    <div class="about__block-inner flex-row">
+                                        <div class="about__block-col flex-col">
+                                            <div class="about__block flex-col">
+                                                <p>
+                                                    лучшие цены в Беларуси
+                                                </p>
+                                            </div>
+                                            <div class="about__block flex-col">
+                                                <p>
+                                                    любая продукция под заказ в кратчайшие сроки
+                                                </p>
+                                            </div>
                                         </div>
-                                        <div class="about__block flex-col">
-                                            <p>
-                                                любая продукция под заказ в кратчайшие сроки
-                                            </p>
+                                        <div class="about__block-col flex-col">
+                                            <div class="about__block flex-col">
+                                                <p>
+                                                    официальная гарантия на продукцию
+                                                </p>
+                                            </div>
+                                            <button class="about__btn">
+                                                Позвонить
+                                            </button>
                                         </div>
-                                    </div>
-                                    <div class="about__block-col flex-col">
-                                        <div class="about__block flex-col">
-                                            <p>
-                                                официальная гарантия на продукцию
-                                            </p>
-                                        </div>
-                                        <button class="about__btn">
-                                            Позвонить
-                                        </button>
                                     </div>
                                 </div>
                             </div>
