working on products

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 
 
-<!-- <div class="products__product_card">
+<!-- <div class="products__product-card">
     <img src="./images/block4_products" alt="">
     <h4 class="products__card-title"></h4>
     <p class="products__card-info"></p>
@@ -137,9 +137,9 @@
     </div>
     <div class="products__size">
         <p class="products__card-subtitle">Фасовка:</p>
-        <button class="products__button-size">1 л</button>
-        <button class="products__button-size">5 кг</button>
-        <button class="products__button-size">20 кг</button>
+        <div class="products__button-size">1 л</div>
+        <div class="products__button-size">5 кг</div>
+        <div class="products__button-size">20 кг</div>
         <button class="products__button-buy">Купить</button>
     </div>
 </div> -->
