styling block products

--- a/index.html
+++ b/index.html
@@ -126,20 +126,24 @@
 
 
 
-
 <!-- <div class="products__product-card">
-    <img src="./images/block4_products" alt="">
-    <h4 class="products__card-title"></h4>
-    <p class="products__card-info"></p>
-    <div class="products__ingredients">
-        <p class="products__card-subtitle">Состав:</p>
-        <p class="products__card-info"></p>
+    <div class="products__card-img">
+        <img src="./images/block4_products" alt="">
     </div>
-    <div class="products__size">
-        <p class="products__card-subtitle">Фасовка:</p>
-        <div class="products__button-size">1 л</div>
-        <div class="products__button-size">5 кг</div>
-        <div class="products__button-size">20 кг</div>
-        <button class="products__button-buy">Купить</button>
+
+    <div class="products__card-content">
+        <h4 class="products__card-title"></h4>
+        <p class="products__card-info"></p>
+        <div class="products__ingredients">
+            <p class="products__card-subtitle">Состав:</p>
+            <p class="products__card-info"></p>
+        </div>
+        <div class="products__size">
+            <p class="products__card-subtitle">Фасовка:</p>
+            <div class="products__button-size">1 л</div>
+            <div class="products__button-size">5 кг</div>
+            <div class="products__button-size">20 кг</div>
+            <button class="products__button-buy">Купить</button>
+    </div>
     </div>
 </div> -->
