working on collapsible block products

--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
         <!-- BLOCK 4 PRODUCTS -->
 
         <div class="products">
-            <h2 class="products__title">Продукция</h2>
+            <div class="products__title-group">
+                <img src="images/block4_products/products-logo.svg" alt="красные линии логотип">
+                <h2 class="products__title">Продукция</h2>
+            </div>
             <!-- АВТОШАМПУНИ -->
             <div class="products__shampoo">
                 <h3 class="products__subtitle">Автошампуни</h3>
@@ -102,8 +105,12 @@
                 </div>
 
                 <!-- разворачивающийся блок -->
-                <div class="products__collapsible"></div>
+                <div class="products__collapsible-wrapper"></div>
             </div>
+
+            <button class="products__button-more">
+                <nobr>Смотреть ещё <img src="./images/arrows/red_arrow.svg" alt="иконка стрелка"></nobr>
+            </button>
 
             <!-- ВОСКИ -->
             <div class="products__wax">
