footer 768px done

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                 </div>
 
                 <div class="contacts contacts_right">
-                    <div id="map" class="contacts_right__map"></div>
+                    <!-- <div id="map" class="contacts_right__map"></div> -->
                     <img src="./images/block-9_icons/map.png" alt="map" class="block-contacts-map__image">
                 </div>
             </div>
@@ -440,7 +440,7 @@
         <!-- footer -->
         <footer class="footer">
             <div class="footer-logo">
-                <img src="./images/logo.svg" alt="" class="footer-logo__image">
+                <img src="./images/logo.png" alt="" class="footer-logo__image">
                 <p class="footer-logo__text">Официальный представитель в Беларуси</p>
             </div>
 
@@ -453,11 +453,12 @@
                 <a class="footer-menu__link" href="#service">Сервис</a>
                 <a class="footer-menu__link" href="#contacts">Контакты</a>
             </div>
+
             <div class="footer-contacts">
                 <div class="footer-contacts footer-contacts_top">
-                    <p class="content-container__item"><span
+                    <a class="content-container__item"><span
                             class="content-container__item_bold content-container__item_red">365-80-70</span> МТС | А1
-                    </p>
+                    </a>
                     <p class="content-container__item">info@cleanol.by</p>
                 </div>
 
