turn phone number into link

--- a/index.html
+++ b/index.html
@@ -363,7 +363,8 @@
                             специалистом?</p>
                         <p class="content-container_left__item content-container_left__item_sp">Всегда рады вашему
                             звонку по
-                            телефону <br><span class="content-container__item_bold">365-80-70</span> МТС | А1
+                            телефону <br><a class="content-container__item_bold" href="#tel:+375293658070">365-80-70</a>
+                            МТС | А1
                         </p>
                     </div>
 
@@ -456,9 +457,10 @@
 
             <div class="footer-contacts">
                 <div class="footer-contacts footer-contacts_top">
-                    <a class="content-container__item"><span
-                            class="content-container__item_bold content-container__item_red">365-80-70</span> МТС | А1
-                    </a>
+                    <p class="content-container__item"><a
+                            class="content-container__item_bold content-container__item_red"
+                            href="#tel:+375293658070">365-80-70</a> МТС | А1
+                    </p>
                     <p class="content-container__item">info@cleanol.by</p>
                 </div>
 
