fix footer bugs

--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
 
                 <!-- bg-red -->
                 <div class="service service_bg-red">
+                    <img src="./images/block-8_icons/big_question_mark.svg" alt="" class="service_bg-red__img">
                     <div class="content-container content-container_left">
                         <p class="content-container_left__item">Вам важны стабильные поставки
                             автохимии?</p>
