used photos in block5 as bg images

--- a/index.html
+++ b/index.html
@@ -260,10 +260,19 @@
             </section>
             <!-- block 5 -->
             <div class="photos">
-                <img src="./images/block-5/photo_1.png" alt="" class="photos__item photos__item_l-top">
-                <img src="./images/block-5/photo_2.png" alt="" class="photos__item photos__item_r-top">
-                <img src="./images/block-5/photo_3.png" alt="" class="photos__item photos__item_l-bot">
-                <img src="./images/block-5/photo_4.png" alt="" class="photos__item photos__item_r-bot">
+                <div class="photos__item photos__item_l-top">
+                    <p class="photo-text">Собственная научно-исследовательская лаборатория в России</p>
+                </div>
+                <div class="photos__item photos__item_r-top">
+                    <p class="photo-text">Многоуровневая система контроля качества на каждом этапе производства
+                        продукции</p>
+                </div>
+                <div class="photos__item photos__item_l-bot">
+                    <p class="photo-text">Новейшие разработки и готовые технологические решения</p>
+                </div>
+                <div class="photos__item photos__item_r-bot">
+                    <p class="photo-text">Постоянное улучшение действующих рецептур</p>
+                </div>
             </div>
             <!-- block 5 -->
             <!-- block 6 -->
@@ -466,7 +475,7 @@
                 </div>
 
                 <div class="footer-contacts footer-contacts_bottom">
-                    <p class="content-container__item content-container__item_red">220012, Республика Беларусь,  г.
+                    <p class="content-container__item content-container__item_red">220012, Республика Беларусь, г.
                         Минск,
                         ул. Толбухина 2а, к. 320</p>
                     <p class="content-container__item content-container__item_tiny">Время работы: пн-пт с 9 до 18</p>
