products added wax and special

--- a/index.html
+++ b/index.html
@@ -101,26 +101,34 @@
                 <h3 class="products__subtitle">Автошампуни</h3>
 
                 <!-- видимый блок -->
-                <div class="products__visible-wrapper">
-                </div>
+                <div class="products__visible-wrapper" id="shampoo-wrapper-visible"></div>
 
                 <!-- разворачивающийся блок -->
-                <div class="products__collapsible-wrapper"></div>
+                <div class="products__collapsible-wrapper" id="shampoo-wrapper-collapsible"></div>
             </div>
 
-            <button class="products__button-more">
+            <button class="products__button-more" id="shampoo-button-more">
                 <nobr>Смотреть ещё <img src="./images/arrows/red_arrow.svg" alt="иконка стрелка"></nobr>
             </button>
 
             <!-- ВОСКИ -->
             <div class="products__wax">
                 <h3 class="products__subtitle">Воски</h3>
+                <div class="products__visible-wrapper" id="wax-wrapper-visible"></div>
             </div>
 
             <!-- СПЕЦИАЛЬНЫЕ СРЕДСТВА -->
             <div class="products__special">
                 <h3 class="products__subtitle">Специальные средства</h3>
+                <!-- видимый блок -->
+                <div class="products__visible-wrapper" id="special-wrapper-visible"></div>
+                <!-- разворачивающийся блок -->
+                <div class="products__collapsible-wrapper" id="special-wrapper-collapsible"></div>
             </div>
+
+            <button class="products__button-more" id="special-button-more">
+                <nobr>Смотреть ещё <img src="./images/arrows/red_arrow.svg" alt="иконка стрелка"></nobr>
+            </button>
         </div>
     </main>
 
