fix convinience layout and title-container

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     </div>
                 </div>
             </section>
-            <!-- block 5 -->
+            <!-- photos -->
             <div class="photos">
                 <div class="photos__item photos__item_l-top">
                     <p class="photo-text">Собственная научно-исследовательская лаборатория в России</p>
@@ -274,8 +274,8 @@
                     <p class="photo-text">Постоянное улучшение действующих рецептур</p>
                 </div>
             </div>
-            <!-- block 5 -->
-            <!-- block 6 -->
+            <!-- photos -->
+            <!-- convinience -->
             <div class="convinience" id="convinience">
                 <div class="title-container">
                     <img src="./images/logo_swoosh.svg" alt="" class="title-container__icon">
@@ -285,34 +285,34 @@
                 <div class="card-wrapper">
                     <div class="card-item">
                         <button class="card-item__button">Бесплатно</button>
-                        <img src="./images/block-6_icons/b6_icon_delivery.svg" alt="" class="card-item__image">
-                        <p class="card-item__slogan">Доставка <br>автохимии</p>
+                        <img src="./images/convinience_icons/b6_icon_delivery.svg" alt="" class="card-item__image">
+                        <p class="card-item__slogan">Доставка автохимии</p>
                     </div>
 
                     <div class="card-item">
                         <button class="card-item__button">Бесплатно</button>
-                        <img src="./images/block-6_icons/b6_icon_test.svg" alt="" class="card-item__image">
-                        <p class="card-item__slogan">Тестирование <br>автохимии</p>
+                        <img src="./images/convinience_icons/b6_icon_test.svg" alt="" class="card-item__image">
+                        <p class="card-item__slogan">Тестирование автохимии</p>
                     </div>
 
                     <div class="card-item">
                         <button class="card-item__button">Бесплатно</button>
-                        <img src="./images/block-6_icons/b6_con_consult.svg" alt="" class="card-item__image">
+                        <img src="./images/convinience_icons/b6_con_consult.svg" alt="" class="card-item__image">
                         <p class="card-item__slogan">Выезд и консультация специалиста</p>
                     </div>
 
                     <div class="card-item">
                         <button class="card-item__button">Выгодно</button>
-                        <img src="./images/block-6_icons/b6_icon_payment.svg" alt="" class="card-item__image">
-                        <p class="card-item__slogan">Отсрочка <br>платежа</p>
+                        <img src="./images/convinience_icons/b6_icon_payment.svg" alt="" class="card-item__image">
+                        <p class="card-item__slogan">Отсрочка платежа</p>
                     </div>
                 </div>
 
                 <button class="block-btn block-btn_red block-btn_centered" onclick="">Позвонить </button>
             </div>
-            <!-- block 6 -->
+            <!-- convinience -->
 
-            <!-- block service -->
+            <!-- service -->
             <div class="service" id="service">
                 <!-- bg-grey -->
                 <div class="service service_bg-grey">
@@ -410,9 +410,9 @@
                 </div>
                 <!-- block service -->
             </div>
-            <!-- block service -->
+            <!-- service -->
 
-            <!-- block contacts -->
+            <!-- contacts -->
             <div class="contacts" id="contacts">
                 <div class="contacts contacts_left">
                     <div class="title-container title-container_contacts">
@@ -445,7 +445,7 @@
                     <img src="./images/block-9_icons/map.png" alt="map" class="block-contacts-map__image">
                 </div>
             </div>
-            <!-- block contacts -->
+            <!-- contacts -->
         </main>
 
         <!-- footer -->
