--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
 
     <!-- внимание - в API карты - временный ключ! -->
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
+        src="https://api-maps.yandex.ru/2.1?apikey=3e503b03-a02c-492f-a2de-bfd7c7b55ab1&lang=ru_RU&<дополнительные параметры>"
         defer></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
