--- a/index.html
+++ b/index.html
@@ -506,8 +506,7 @@
                             <p class="content-container__item_bold">г. Минск, ул. Толбухина
                                 2а, к.
                                 320</p>
-                            <p class="content-container__item content-container__item_tiny">Мы
-                                работаем с 08:00 до
+                            <p class="content-container__item content-container__item_tiny">Мы работаем с 08:00 до
                                 20:00</p>
                         </div>
 
@@ -515,60 +514,54 @@
                             <img src="./images/block-9_icons/icon_chat.svg" alt="message icon"
                                 class="content-container__icon">
                             <p class="content-container__item_bold">info@cleanol.by</p>
-                            <p class="content-container__item content-container__item_tiny">Для
-                                ваших вопросов</p>
+                            <p class="content-container__item content-container__item_tiny">Для ваших вопросов</p>
                         </div>
                     </div>
                 </div>
+
+                <div class="contacts contacts_right">
+                    <!-- <div id="map" class="contacts_right__map"></div> -->
+                    <img src="./images/block-9_icons/map.png" alt="map" class="block-contacts-map__image">
+                </div>
             </div>
-    </div>
+            <!-- contacts -->
+        </main>
 
-    </main>
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
-    <!-- <script src="node_modules/swiper/swiper-bundle.min.js"></script> -->
-    <div class="contacts contacts_right">
-        <!-- <div id="map" class="contacts_right__map"></div> -->
-        <img src="./images/block-9_icons/map.png" alt="map" class="block-contacts-map__image">
-        <!-- </div> -->
-    </div>
-    <!-- contacts -->
-    <!-- </main> -->
-
-    <!-- footer -->
-    <footer class="footer">
-        <div class="footer-logo">
-            <img src="./images/logo.png" alt="" class="footer-logo__image">
-            <p class="footer-logo__text">Официальный представитель в Беларуси</p>
-        </div>
-
-        <div class="footer-menu">
-            <a class="footer-menu__link" href="#">О компании Cleanol</a>
-            <a class="footer-menu__link" href="#">О нас</a>
-            <a class="footer-menu__link" href="#">Автошампуни</a>
-            <a class="footer-menu__link" href="#">Воски</a>
-            <a class="footer-menu__link" href="#">Специальные средства</a>
-            <a class="footer-menu__link" href="#service">Сервис</a>
-            <a class="footer-menu__link" href="#contacts">Контакты</a>
-        </div>
-
-        <div class="footer-contacts">
-            <div class="footer-contacts footer-contacts_top">
-                <p class="content-container__item"><a class="content-container__item_bold content-container__item_red"
-                        href="#tel:+375293658070">365-80-70</a> МТС | А1
-                </p>
-                <p class="content-container__item">info@cleanol.by</p>
+        <!-- footer -->
+        <footer class="footer">
+            <div class="footer-logo">
+                <img src="./images/logo.png" alt="" class="footer-logo__image">
+                <p class="footer-logo__text">Официальный представитель в Беларуси</p>
             </div>
 
-            <div class="footer-contacts footer-contacts_bottom">
-                <p class="content-container__item content-container__item_red">220012, Республика Беларусь, г.
-                    Минск,
-                    ул. Толбухина 2а, к. 320</p>
-                <p class="content-container__item content-container__item_tiny">Время работы: пн-пт с 9 до 18</p>
+            <div class="footer-menu">
+                <a class="footer-menu__link" href="#">О компании Cleanol</a>
+                <a class="footer-menu__link" href="#">О нас</a>
+                <a class="footer-menu__link" href="#">Автошампуни</a>
+                <a class="footer-menu__link" href="#">Воски</a>
+                <a class="footer-menu__link" href="#">Специальные средства</a>
+                <a class="footer-menu__link" href="#service">Сервис</a>
+                <a class="footer-menu__link" href="#contacts">Контакты</a>
             </div>
-        </div>
-    </footer>
-    <!-- footer -->
+
+            <div class="footer-contacts">
+                <div class="footer-contacts footer-contacts_top">
+                    <p class="content-container__item"><a
+                            class="content-container__item_bold content-container__item_red"
+                            href="#tel:+375293658070">365-80-70</a> МТС | А1
+                    </p>
+                    <p class="content-container__item">info@cleanol.by</p>
+                </div>
+
+                <div class="footer-contacts footer-contacts_bottom">
+                    <p class="content-container__item content-container__item_red">220012, Республика Беларусь, г.
+                        Минск,
+                        ул. Толбухина 2а, к. 320</p>
+                    <p class="content-container__item content-container__item_tiny">Время работы: пн-пт с 9 до 18</p>
+                </div>
+            </div>
+        </footer>
+        <!-- footer -->
     </div>
 
     <!-- внимание - в API карты - временный ключ! -->
