--- a/index.html
+++ b/index.html
@@ -49,37 +49,37 @@
                         <nav class="header__menu">
                             <ul class="header__menu-list flex-row">
                                 <li class="header__menu-item">
-                                    <a href="#" class="header__menu-link">
+                                    <a href="#about" class="header__menu-link">
                                         О компании Cleanol <span>|</span>
                                     </a>
                                 </li>
                                 <li class="header__menu-item">
-                                    <a href="#" class="header__menu-link">
+                                    <a href="#about" class="header__menu-link">
                                         О нас <span>|</span>
                                     </a>
                                 </li>
                                 <li class="header__menu-item">
-                                    <a href="#" class="header__menu-link">
+                                    <a href="#shampoo" class="header__menu-link">
                                         Автошампуни <span>|</span>
                                     </a>
                                 </li>
                                 <li class="header__menu-item">
-                                    <a href="#" class="header__menu-link">
+                                    <a href="#wax" class="header__menu-link">
                                         Воски <span>|</span>
                                     </a>
                                 </li>
                                 <li class="header__menu-item">
-                                    <a href="#" class="header__menu-link">
+                                    <a href="#special" class="header__menu-link">
                                         Специальные средства<span>|</span>
                                     </a>
                                 </li>
                                 <li class="header__menu-item">
-                                    <a href="#" class="header__menu-link">
+                                    <a href="#service" class="header__menu-link">
                                         Сервис <span>|</span>
                                     </a>
                                 </li>
                                 <li class="header__menu-item">
-                                    <a href="#" class="header__menu-link">
+                                    <a href="#contacts" class="header__menu-link">
                                         Контакты
                                     </a>
                                 </li>
@@ -100,7 +100,7 @@
                             <div class="banner__info">
                                 <h1 class="banner__title">Ice Max Cleanol - СУПЕРпенный</h1>
                                 <p class="banner__text">Отлично работает в жесткой воде</p>
-                                <button class="banner__button-more">Узнать больше</button>
+                                <button class="banner__button-more popup__open">Узнать больше</button>
                             </div>
                         </div>
                         <!-- slide 2-->
@@ -110,7 +110,7 @@
                                     сочетание цена/качество</h1>
                                 <p class="banner__text">Низкощелочной шампунь = бережная мойка
                                 </p>
-                                <button class="banner__button-more">Узнать больше</button>
+                                <button class="banner__button-more popup__open">Узнать больше</button>
                             </div>
                         </div>
                         <!-- slide 3-->
@@ -122,7 +122,7 @@
                                     автомобиля. Капли
                                     скатываются
                                     за счет своей тяжести или под воздействием силы ветра</p>
-                                <button class="banner__button-more">Узнать больше</button>
+                                <button class="banner__button-more popup__open">Узнать больше</button>
                             </div>
                         </div>
                         <!-- slide 4-->
@@ -132,7 +132,7 @@
                                     для моек самообслуживания</h1>
                                 <p class="banner__text">Сильная моющая способность. Высокая
                                     пенность</p>
-                                <button class="banner__button-more">Узнать больше</button>
+                                <button class="banner__button-more popup__open">Узнать больше</button>
                             </div>
                         </div>
                         <!-- slide 5-->
@@ -141,7 +141,7 @@
                                 <h1 class="banner__title">Cleanol - контроль качества</h1>
                                 <p class="banner__text">на каждом этапе производства продукции
                                 </p>
-                                <button class="banner__button-more">Узнать больше</button>
+                                <button class="banner__button-more popup__open">Узнать больше</button>
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
             <!-- BLOCK 2 BANNER -->
 
 
-            <section class="about">
+            <section class="about" id="about">
                 <div class="about__inner">
                     <div class="about__info">
                         <div class="container">
@@ -270,7 +270,7 @@
                                                     официальная гарантия на продукцию
                                                 </p>
                                             </div>
-                                            <button class="about__btn">
+                                            <button class="about__btn popup__open">
                                                 Позвонить
                                             </button>
                                         </div>
@@ -283,14 +283,13 @@
             </section>
 
             <!-- BLOCK 4 PRODUCTS -->
-
             <div class="products">
                 <div class="products__title-group">
                     <img src="images/block4_products/products-logo.svg" alt="красные линии логотип">
                     <h2 class="products__title">Продукция</h2>
                 </div>
                 <!-- АВТОШАМПУНИ -->
-                <div class="products__shampoo">
+                <div class="products__shampoo" id="shampoo">
                     <h3 class="products__subtitle">Автошампуни</h3>
 
                     <!-- видимый блок -->
@@ -306,13 +305,13 @@
                 </button>
 
                 <!-- ВОСКИ -->
-                <div class="products__wax">
+                <div class="products__wax" id="wax">
                     <h3 class="products__subtitle">Воски</h3>
                     <div class="products__visible-wrapper" id="wax-wrapper-visible"></div>
                 </div>
 
                 <!-- СПЕЦИАЛЬНЫЕ СРЕДСТВА -->
-                <div class="products__special">
+                <div class="products__special" id="special">
                     <h3 class="products__subtitle">Специальные средства</h3>
                     <!-- видимый блок -->
                     <div class="products__visible-wrapper" id="special-wrapper-visible"></div>
@@ -325,7 +324,6 @@
                     </nobr>
                 </button>
             </div>
-
 
             <!-- photos -->
             <div class="photos">
@@ -346,7 +344,7 @@
                     <p class="photo-text">Постоянное улучшение действующих рецептур</p>
                 </div>
             </div>
-            <!-- photos -->
+
             <!-- convinience -->
             <div class="convinience" id="convinience">
                 <div class="title-container">
@@ -380,10 +378,9 @@
                     </div>
                 </div>
 
-                <button class="block-btn block-btn_red block-btn_centered" onclick="">Позвонить
+                <button class="block-btn block-btn_red block-btn_centered popup__open" onclick="">Позвонить
                 </button>
             </div>
-            <!-- convinience -->
 
             <!-- service -->
             <div class="service" id="service">
@@ -432,7 +429,7 @@
                                 цену?</span>
                             Наши любезные менеджеры проконсультируют вас
                             по всем нюансам сервисного обслуживания и его стоимости</p>
-                        <button class="block-btn block-btn_red" onclick="">Позвонить </button>
+                        <button class="block-btn block-btn_red popup__open" onclick="">Позвонить </button>
                     </div>
                 </div>
 
@@ -483,13 +480,11 @@
                                 <textarea id="message" cols="30" rows="10" class="input-field" name="message"
                                     placeholder="Интересует покупка средства Cleanol «Optimal», 5 кг"></textarea>
                             </div>
-                            <button class="block-btn block-btn_white" type="submit" onclick="" >Позвонить</button>
+                            <button class="block-btn block-btn_white" type="submit" onclick="">Позвонить</button>
                         </form>
                     </div>
                 </div>
-                <!-- block service -->
             </div>
-            <!-- service -->
 
             <!-- contacts -->
             <div class="contacts" id="contacts">
@@ -513,7 +508,7 @@
                         <div class="contacts-inner contacts-inner_right">
                             <img src="./images/block-9_icons/icon_chat.svg" alt="message icon"
                                 class="content-container__icon">
-                            <p class="content-container__item_bold">info@cleanol.by</p>
+                            <a class="content-container__item_bold" href="mailto:info@cleanol.by">info@cleanol.by</a>
                             <p class="content-container__item content-container__item_tiny">Для ваших вопросов</p>
                         </div>
                     </div>
@@ -524,7 +519,6 @@
                     <img src="./images/block-9_icons/map.png" alt="map" class="block-contacts-map__image">
                 </div>
             </div>
-            <!-- contacts -->
         </main>
 
         <!-- footer -->
@@ -535,11 +529,11 @@
             </div>
 
             <div class="footer-menu">
-                <a class="footer-menu__link" href="#">О компании Cleanol</a>
-                <a class="footer-menu__link" href="#">О нас</a>
-                <a class="footer-menu__link" href="#">Автошампуни</a>
-                <a class="footer-menu__link" href="#">Воски</a>
-                <a class="footer-menu__link" href="#">Специальные средства</a>
+                <a class="footer-menu__link" href="#about">О компании Cleanol</a>
+                <a class="footer-menu__link" href="#about">О нас</a>
+                <a class="footer-menu__link" href="#shampoo">Автошампуни</a>
+                <a class="footer-menu__link" href="#wax">Воски</a>
+                <a class="footer-menu__link" href="#special">Специальные средства</a>
                 <a class="footer-menu__link" href="#service">Сервис</a>
                 <a class="footer-menu__link" href="#contacts">Контакты</a>
             </div>
@@ -550,7 +544,7 @@
                             class="content-container__item_bold content-container__item_red"
                             href="#tel:+375293658070">365-80-70</a> МТС | А1
                     </p>
-                    <p class="content-container__item">info@cleanol.by</p>
+                    <a class="content-container__item" href="mailto:info@cleanol.by">info@cleanol.by</a>
                 </div>
 
                 <div class="footer-contacts footer-contacts_bottom">
@@ -561,15 +555,13 @@
                 </div>
             </div>
         </footer>
-        <!-- footer -->
     </div>
 
     <!-- popup -->
     <div class="popup" id="popup">
         <div class="popup-body">
             <form class="popup-form" id="form">
-                <a href="#header" class="popup__close"><img src="./images/close_icon.svg"
-                        alt=""></a>
+                <a href="#header" class="popup__close"><img src="./images/close_icon.svg" alt=""></a>
                 <div class="popup-content">
                     <h3 class="popup-content__title">
                         Свяжитесь с нами!
@@ -619,8 +611,8 @@
                             “Отправить заявку”, вы соглашаетесь на обработку персональных данных</label>
                     </div>
 
-                    <button class="popup-button popup__open2 confirm" type="submit" id="#popup_2"
-                        onclick="">Отправить заявку</button>
+                    <button class="popup-button popup__open2 confirm" type="submit" id="#popup_2" onclick="">Отправить
+                        заявку</button>
                 </div>
             </form>
         </div>
@@ -631,8 +623,7 @@
         <div class="popup-body">
             <div class="popup-form popup-parent">
                 <div class="popup-content ">
-                    <a class="close__tnks" href="#"><img src="./images/close_icon.svg"
-                        alt=""></a>
+                    <a class="close__tnks" href="#"><img src="./images/close_icon.svg" alt=""></a>
                     <img src="./images/confirmation_icon.svg" alt="" class="popup__confirm-icon">
                     <div class="popup-content__text popup-content__text_lg"><span
                             class="popup-content__text_bold">Спасибо, ваша заявка
@@ -651,6 +642,7 @@
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/popup.js"></script>
+    <script src="js/sendForm.js"></script>
 </body>
 
 </html>
