--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@
                 </div>
 
                 <div class="contacts contacts_right">
-                    <!-- <div id="map" class="contacts_right__map"></div> -->
-                    <img src="./images/block-9_icons/map.png" alt="map" class="block-contacts-map__image">
+                    <div id="map" class="contacts_right__map"></div>
+                    <!-- <img src="./images/block-9_icons/map.png" alt="map" class="block-contacts-map__image"> -->
                 </div>
             </div>
         </main>
@@ -636,13 +636,14 @@
 
     <!-- внимание - в API карты - временный ключ! -->
     <script
-        src="https://api-maps.yandex.ru/2.1?apikey=3e503b03-a02c-492f-a2de-bfd7c7b55ab1&lang=ru_RU&<дополнительные параметры>"
-        defer></script>
+        src="https://api-maps.yandex.ru/2.1?apikey=3e503b03-a02c-492f-a2de-bfd7c7b55ab1&lang=ru_RU"
+        type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/popup.js"></script>
     <script src="js/sendForm.js"></script>
+    <script src="js/map.js" type="text/javascript"></script>
 </body>
 
 </html>
